Updated a minor bug with the z-index of the nav

--- a/css/output.css
+++ b/css/output.css
@@ -9949,7 +9949,7 @@ h3 {
 .Nav {
   background: #ffffff;
   box-shadow: 0 0 32px rgba(0, 0, 0, 0.15);
-  z-index: 10;
+  z-index: 100;
 }
 
 .Nav--fixed {
