--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -3,7 +3,7 @@ $nav-padding: 20px;
 .Nav {
   background: #ffffff;
   box-shadow: 0 0 32px rgba(0, 0, 0, 0.15);
-  z-index: 10;
+  z-index: 100;
 }
 
 .Nav--fixed {
